[metadata]
name = yarrowformat
description = Yarrow Format parsing lib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michelin/YarrowFormat
author = Mathieu Pichon
author_email = mathieu.pichon_ext@michelin.com

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6
install_requires =
    setuptools
    wheel
    pydantic; python_version >= "1.8"
    numpy; python_version >= "1.19"
    click
zip_safe = False
include_package_data = True

[options.extras_require]
dev =
    black
    isort
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yarrow = yarrow.main:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/yarrow/_version.py
versionfile_build = yarrow/_version.py
tag_prefix = v
parentdir_prefix = yarrow-